Doc radio test programs

--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -102,6 +102,7 @@
 \input{hardware}
 \input{schematic}
 \input{PCB}
+\input{assembly}
 \input{software}
 \input{firstprogram}
 \input{testprograms}
