--- a/doc/guide/schematic.tex
+++ b/doc/guide/schematic.tex
@@ -11,7 +11,7 @@ See the ENCE461 Learn page for the Altium tutorial.
 
 \begin{enumerate}
 \item If you get the schematic wrong, the PCB will be wrong, and you
-  will have rework grief.
+  will have rework grief (see \hyperref[rework]{rework}).
 
 \item A clear schematic is important for debugging.
 
@@ -25,6 +25,14 @@ See the ENCE461 Learn page for the Altium tutorial.
 
 \section{Check list}
 \label{PCB-check-list}
+
+You must check the schematic carefully.  I use a highlighter to mark
+every wire and component.  If you get the schematic wrong, the PCB
+will be wrong, and you will have to do much rework, see figure below.
+And yes, this board worked in the end.
+
+\mtodo{Show photos of rework grief}
+
 
 \begin{enumerate}
 \item
