--- a/doc/guide/rework.tex
+++ b/doc/guide/rework.tex
@@ -1,8 +1,11 @@
 \chapter{Rework}
+\label{rework}
+
 
 Flux is your friend when doing rework.  However, you need to remove it
 from your board when finished, see \hyperref[flux removal]{flux
-  removal}.
+  removal}.  You should check all rework with a magnifier and look for
+solder bridges.
 
 
 \section{Removing resistors and capacitors}
@@ -30,14 +33,14 @@ from your board when finished, see \hyperref[flux removal]{flux
 
 \begin{enumerate}
 \item Only remove as last resort.
-  
+
 \item Apply flux from syringe to all pins.
 
 \item Get Scott to show you how to use the hot-air gun.  The key is to
   choose a head that matches the size of the MCU and getting the
   temperature correct.
 
-\item Be careful not to lift pads or tracks.  
+\item Be careful not to lift pads or tracks.
 \end{enumerate}
 
 
@@ -55,7 +58,7 @@ from your board when finished, see \hyperref[flux removal]{flux
 
 \item Apply flux from syringe to both pads.
 
-\item Use small soldering iron.  
+\item Use small soldering iron to solder wires in place.
 \end{enumerate}
 
 
@@ -65,5 +68,11 @@ from your board when finished, see \hyperref[flux removal]{flux
 \item Scrub board with using flux-cleaner and brush.
 \item Clean board with a towel.
 \item Wash board with a little bit of IPA.
-\item Clean board with a towel.  
+\item Clean board with a towel.
 \end{enumerate}
+
+
+\mtodo{Show photos of clean board and dirty board}
+
+
+\mtodo{Show photos of rework grief}
