--- a/doc/guide/introduction.tex
+++ b/doc/guide/introduction.tex
@@ -12,3 +12,10 @@ operating system for many high-end embedded systems; it runs on
 Android phones and probably on your internet router.  And, yeah, I
 like the command-line; it is faster than using a mouse and GUI.
 
+
+I would like to thank all those who have helped with this assignment
+over the years: Andrew Bainbrige-Smith, Blair Bonnett, Chris Cameron,
+Mike Cusdin, Matthew Edwards, Michael Frampton, Jay Gunathailake,
+Daniel Hopkins, Harry Mander, Daniel Morris, Morgan King, Scott Lloyd,
+Ben Mitchell, Diego Ramirez, Andre Renaud, Sam Spekreijse, Steve
+Weddell.
