--- a/doc/guide/libraries.tex
+++ b/doc/guide/libraries.tex
@@ -156,11 +156,10 @@ Here is an example:
 \section{Coding style}
 
 For the curious, the GNU C coding style is used.  I worked as a
-contractor for the USA company Cygnus Solutions (taken over by Redhat)
-as a compiler engineer working on the GNU C compiler (GCC).  The
-first-rule when working as a programmer for a company is to follow the
-required coding style.  My text editor (emacs) is set up to default to
-this style.
+compiler engineer for the USA company Cygnus Solutions (taken over by
+Redhat) on the GNU C compiler (GCC).  The first-rule when working as a
+programmer for a company is to follow the required coding style.  My
+text editor (emacs) is set up to default to this style.
 
 
 \section{Under the bonnet}
