--- a/doc/guide/assembly.tex
+++ b/doc/guide/assembly.tex
@@ -6,19 +6,34 @@
 You cannot use the SMT lab unless you have performed a lab induction.
 
 
-\section{Component orientation}
+\section{Solder pasting}
 
-It is easy to orient the MCU incorrectly.
+Solder paste needs to be applied to each pad.  Usually this is applied
+using a stencil but for small boards, it can be applied using a
+syringe.  The solder paste must be fresh.
+
+
+\section{Component placement}
+
+The components are placed onto the pasted pads using a pick-and-place
+machine.  The key is to get the orientation of chips, diodes, and LEDs
+correct.
+
+It is easy to orient the MCU incorrectly.  The big dot \textbf{does
+  not mark pin 1}\footnote{I think they add this to sell more chips.}.
 
 
 \mtodo{Show image of MCU and where pin 1 is.}
 
 
-\section{Board cleaning}
+\section{Reflow oven}
+
+When the board has been populated, the PCB is placed in the reflow
+oven.  At the end of the process, remove your PCB using oven gloves.
+You do not need to clean the board.
 
 
 \section{Visual inspection}
-
 
 Look for solder bridges, especially between IC pins.  These can be
 removed with a fine-tipped soldering iron.
