Add rework photo

--- a/doc/guide/assembly.tex
+++ b/doc/guide/assembly.tex
@@ -20,7 +20,7 @@ machine.  The key is to get the orientation of chips, diodes, and LEDs
 correct.
 
 It is easy to orient the MCU incorrectly.  The big dot \textbf{does
-  not mark pin 1}\footnote{I think they add this to sell more chips.}.
+  not mark pin 1}\footnote{I think they add this to sell more chips\ldots}.
 
 
 \mtodo{Show image of MCU and where pin 1 is.}
