--- a/doc/guide/schematic.tex
+++ b/doc/guide/schematic.tex
@@ -28,10 +28,19 @@ See the ENCE461 Learn page for the Altium tutorial.
 
 You must check the schematic carefully.  I use a highlighter to mark
 every wire and component.  If you get the schematic wrong, the PCB
-will be wrong, and you will have to do much rework, see figure below.
-And yes, this board worked in the end.
+will be wrong, and you will have to do much rework, see
+Figure~\ref{fig:rework}.
 
-\mtodo{Show photos of rework grief}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=6in]{figs/rework.jpg}
+  \caption{Example of a PCB where not much care was taken with the
+    schematic resulting in a lot of rework.  And yes, the board worked
+    in the end.}
+  \label{fig:rework}
+\end{figure}
+
 
 
 \begin{enumerate}
