--- a/doc/guide/schematic.tex
+++ b/doc/guide/schematic.tex
@@ -29,10 +29,10 @@ See the ENCE461 Learn page for the Altium tutorial.
 You must check the schematic carefully.  I use a highlighter to mark
 every wire and component.  If you get the schematic wrong, the PCB
 will be wrong, and you will have to do much rework, see
-Figure~\ref{fig:rework}.
+\reffig{fig:rework}.
 
 
-\begin{figure}
+\begin{figure}[!h]
   \centering
   \includegraphics[width=6in]{figs/rework.jpg}
   \caption{Example of a PCB where not much care was taken with the
