--- a/doc/guide/assembly.tex
+++ b/doc/guide/assembly.tex
@@ -43,8 +43,8 @@ PCB using oven gloves.  You do not need to clean the board.
 
 \section{Visual inspection}
 
-Look for solder bridges, see \reffig{solder-bridge},
-especially between IC pins.  These can be removed with a fine-tipped
+Look for solder bridges, see \reffig{solder-bridge}, especially
+between IC pins.  The bridges can be removed with a fine-tipped
 soldering iron.
 
 \begin{figure}[!h]
@@ -52,5 +52,5 @@ soldering iron.
   \includegraphics[width=6in]{figs/solder_bridge.jpg}
   \caption{A solder bridge shorting pins 1 and 2 of the H-bridge.
     This can easily occur if there is too much solder paste.}
-  \label{fig:solder_bridge}
+  \label{fig:solder-bridge}
 \end{figure}
