Add more rework examples

--- a/doc/guide/rework.tex
+++ b/doc/guide/rework.tex
@@ -75,4 +75,9 @@ solder bridges.
 \mtodo{Show photos of clean board and dirty board}
 
 
-\mtodo{Show photos of rework grief}
+\begin{figure}[!h]
+  \centering \includegraphics[width=6in]{figs/rework2.jpg}
+  \caption{Example of a PCB where not much care was taken with the
+    schematic resulting in a lot of rework. The board worked!}
+  \label{fig:rework2}
+\end{figure}
